nesc-frontend/src/test/resources/integration/programs/bad/bad18/I.nc
interface I<T @integer()>
{
   command T get();
}
